New Crowdin updates (#1632)

--- a/app/i18n/locales/es-ES.json
+++ b/app/i18n/locales/es-ES.json
@@ -52,7 +52,7 @@
   "daedalusTransfer.form.instructions.step0MasterKey.text": "Ingresa la clave maestra desencriptada de tu billetera de Daedalus, para restaurar el saldo y transferir todos los fondos de Daedalus a Yoroi.",
   "daedalusTransfer.form.instructions.step0Paper.text": "Ingresa la frase de recuperación de 27 palabras, para restaurar tu Billetera de Papel de Daedalus, restaurar el saldo, y transferir todos los fondos de Daedalus a Yoroi.",
   "daedalusTransfer.instructions.attention.button.label": "Billetera Daedalus",
-  "daedalusTransfer.instructions.attention.masterKey.button.label": "Clave maestra de Daedalus",
+  "daedalusTransfer.instructions.attention.masterKey.button.label": "Clave Maestra de Daedalus",
   "daedalusTransfer.instructions.attention.paper.button.label": "Billetera de Papel de Daedalus",
   "daedalusTransfer.instructions.attention.title": "Transferir todos los fondos de",
   "daedalusTransfer.waiting.checkingAddresses.generatingTx": "Generando la transacción de transferencia",
@@ -632,12 +632,17 @@
   "wallet.transaction.assuranceLevel.high": "alta",
   "wallet.transaction.assuranceLevel.low": "baja",
   "wallet.transaction.assuranceLevel.medium": "media",
+  "wallet.transaction.certificate.GenesisKeyDelegation": "Delegación de la clave Genesis",
+  "wallet.transaction.certificate.MoveInstantaneousRewardsCert": "Pago de recompensas iniciado manualmente",
   "wallet.transaction.certificate.OwnerStakeDelegation": "Participación delegada de los propietarios",
   "wallet.transaction.certificate.PoolRegistration": "Registro del pool",
   "wallet.transaction.certificate.PoolRetirement": "Baja del pool",
   "wallet.transaction.certificate.PoolUpdate": "Actualización del pool",
   "wallet.transaction.certificate.StakeDelegation": "Participación delegada",
+  "wallet.transaction.certificate.StakeDeregistration": "Anulación de la clave de delegación",
+  "wallet.transaction.certificate.StakeRegistration": "Registro de la clave de delegación",
   "wallet.transaction.certificateLabel": "Certificado",
+  "wallet.transaction.certificatesLabel": "Certificados",
   "wallet.transaction.confirmations": "confirmaciones",
   "wallet.transaction.conversion.rate": "Tasa de conversión",
   "wallet.transaction.export.dialog.exportButton.label": "Exportar",
