--- a/app/i18n/locales/tr-TR.json
+++ b/app/i18n/locales/tr-TR.json
@@ -31,7 +31,7 @@
   "api.errors.invalidWitnessError": "İmza geçersiz.",
   "api.errors.noInputsError": "İyileştirme tümceciğinizden yeniden yüklenen cüzdan boş. Lütfen İyileştirme tümceciğinizi kontrol edin ve geri yüklemeyi tekrar deneyin.",
   "api.errors.pendingTransactionError": "Bekleyen işlemler güncellenirken hata oluştu.",
-  "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
+  "api.errors.poolMissingApiError": "Bu havuz bulunamadı. Kimliği tekrar kontrol edin ve havuzun kaydının kaldırılmadığından emin olun.",
   "api.errors.rollbackApiError": "Geri alma algılandı.",
   "api.errors.sendTransactionApiError": "İşlem gönderilirken sunucudan hata alındı.",
   "api.errors.sendTransactionError": "İşlem gönderilirken api çağrı yönteminden hata alındı.",
@@ -60,7 +60,7 @@
   "daedalusTransfer.waiting.progressInfo.restoringAddresses": "İnternet adresleri getiriliyor",
   "daedalusTransfer.waiting.title.label": "Daedalus cüzdanı yeniden yükleniyor",
   "daedalusTransfer.waiting.warning": "Bu uzun zaman alabilir veya zayıf internet bağlantılarında başarısız olabilir",
-  "global.contact": "iletişim desteği",
+  "global.contact": "iletişim desteği 2",
   "global.copyTooltipMessage": "Kopyalandı",
   "global.errors.fieldIsRequired": "Girilmesi gerekli alan.",
   "global.errors.invalidMasterKey": "Geçersiz kodlama anahtarı girildi, lütfen kontrol edin.",
@@ -192,7 +192,7 @@
   "settings.externalStorage.intro": "Hesabınıza bağlanmak ve hatırlatıcı notlarınızı kaydetmek için harici bir depolama hizmeti seçin.",
   "settings.externalStorage.provider": "{provider}'a bağlanın",
   "settings.externalStorage.title": "Bir hesap bağlayın",
-  "settings.general.aboutYoroi.commitLabel": "Teslim Et:",
+  "settings.general.aboutYoroi.commitLabel": "Değişiklikler:",
   "settings.general.aboutYoroi.facebook": "Yoroi Facebook",
   "settings.general.aboutYoroi.git.branch": "Bölüm:",
   "settings.general.aboutYoroi.github": "Yoroi GitHub",
@@ -465,7 +465,7 @@
   "wallet.debugwallet.explanation2": "Herhangi bir sorunu önlemek için bu cüzdanı kullanmayın. <br /> Bunun yerine yeni bir cüzdan oluşturmak için Yoroi'yi kullanın.",
   "wallet.debugwallet.explanation3": "Eğer bu mesajı beklemediyseniz, lütfen {contactSupportLink}.",
   "wallet.delegate.form.invalidPoolId": "Geçersiz havuz kimliği",
-  "wallet.delegation.poolInfo.fetching": "Fetching pool information",
+  "wallet.delegation.poolInfo.fetching": "Havuz bilgileri alınıyor",
   "wallet.delegation.transaction.approximationLabel": "Dönem başına alacağınız ödüllerin tahmini değeri:",
   "wallet.delegation.transaction.explanationLine1": "Bir seferde yalnızca bir bahis havuzuna yetki verebilirsiniz",
   "wallet.delegation.transaction.explanationLine2": "İstediğiniz zaman farklı bir bahis havuzuna yetkilendirme yapabilirsiniz",
@@ -632,12 +632,17 @@
   "wallet.transaction.assuranceLevel.high": "yüksek",
   "wallet.transaction.assuranceLevel.low": "düşük",
   "wallet.transaction.assuranceLevel.medium": "orta",
+  "wallet.transaction.certificate.GenesisKeyDelegation": "Genesis key delegation",
+  "wallet.transaction.certificate.MoveInstantaneousRewardsCert": "Manually-initiated reward payout",
   "wallet.transaction.certificate.OwnerStakeDelegation": "Hisse sahibi delegasyonu",
   "wallet.transaction.certificate.PoolRegistration": "Havuz kayıt",
   "wallet.transaction.certificate.PoolRetirement": "Havuz emekliliği",
   "wallet.transaction.certificate.PoolUpdate": "Havuz güncellemesi",
   "wallet.transaction.certificate.StakeDelegation": "Bahis heyeti",
+  "wallet.transaction.certificate.StakeDeregistration": "Staking key deregistration",
+  "wallet.transaction.certificate.StakeRegistration": "Staking key registration",
   "wallet.transaction.certificateLabel": "Sertifika",
+  "wallet.transaction.certificatesLabel": "Sertifikalar",
   "wallet.transaction.confirmations": "onaylama",
   "wallet.transaction.conversion.rate": "Dönüşüm oranı",
   "wallet.transaction.export.dialog.exportButton.label": "Dışarı aktar",
