--- a/app/i18n/locales/zh-Hans.json
+++ b/app/i18n/locales/zh-Hans.json
@@ -31,7 +31,7 @@
   "api.errors.invalidWitnessError": "签名无效。",
   "api.errors.noInputsError": "从恢复短语恢复的钱包是空的。 请先检查您的恢复短语，并再次尝试恢复。",
   "api.errors.pendingTransactionError": "更新暂挂交易时发生错误。",
-  "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
+  "api.errors.poolMissingApiError": "找不到该权益池。再次检查ID，确保该权益池没有取消注册。",
   "api.errors.rollbackApiError": "检测到回返。",
   "api.errors.sendTransactionApiError": "发送交易时从服务器收到错误。",
   "api.errors.sendTransactionError": "发送交易时从 api 方法调用收到错误。",
@@ -154,7 +154,7 @@
   "profile.complexityLevel.selected.label": "目前的复杂度为",
   "profile.complexityLevel.simple": "简单",
   "profile.complexityLevel.simple.description": "最简的体验。无需了解区块链的背景知识。对新手友好，也适合喜欢简洁体验的用户。",
-  "profile.complexityLevel.subtitle": "理解区块链是很难得，但我们尽可能为您提供简单的用户界面。",
+  "profile.complexityLevel.subtitle": "理解区块链是很难的，但我们尽可能为您提供简单的用户界面。",
   "profile.complexityLevel.title": "使用界面复杂度",
   "profile.languageSelect.form.languageSelectLabel": "请选择您的语言",
   "profile.languageSelect.title": "语言选择",
@@ -208,12 +208,12 @@
   "settings.general.languageSelect.info": "对EMURGO而言，友好的Yoroi钱包是永恒的主题。我们坚信用您的母语会让理解区块链概念更加容易。 我们尝试尽可能支持更多的语言，但为了支持更多的语言，我们需要接受来自社区翻译的帮助。您所选的语言翻译完全由社区提供。",
   "settings.general.languageSelect.labelInfo": "所选的语言翻译由社区志愿者提供",
   "settings.general.translation.acknowledgment": "感谢下列人员做出的贡献： ",
-  "settings.general.translation.contributors": "Wang Yonggang/红中玉",
+  "settings.general.translation.contributors": "Wang, Yonggang/红中玉",
   "settings.menu.blockchain.link.label": "区块链",
   "settings.menu.externalStorage.link.label": "备注存储空间",
   "settings.menu.general.link.label": "一般",
   "settings.menu.levelOfComplexity.link.label": "复杂度",
-  "settings.menu.support.link.label": "Support / Logs",
+  "settings.menu.support.link.label": "支持/日志",
   "settings.menu.termsOfUse.link.label": "使用条款",
   "settings.menu.wallet.link.label": "钱包",
   "settings.noexternal.dialog.content": "您的备忘录已在本地保存。这些内容不会和其他Yoroi账号同步，如果您删除了本地Yoroi，这些内容将会消失。",
@@ -274,7 +274,7 @@
   "settings.unitOfAccount.note": "<strong>注意：</strong>币价只是估计，不会和某一交易平台的价格完全匹配。基于估计的价格的所有交易需要您承担相关风险。",
   "settings.unitOfAccount.title": "货币转换",
   "sidebar.settings": "设置",
-  "sidebar.transfer": "接受/转账",
+  "sidebar.transfer": "获取/转移",
   "sidebar.wallets": "我的钱包",
   "testnet.label.message": "警告：这是一个网络 {network} 。网络上的ADA并没有货币价值。有关更多资讯，请查看{faqLink} 上的常见问题。",
   "testnet.shelley.label.message": "您正在使用测试网网络({network})。",
@@ -410,7 +410,7 @@
   "wallet.currency.pick.cardano": "Cardano是第一个被证明安全的权益证明（PoS）协议。",
   "wallet.currency.pick.ergo": "Ergo基于数十年的区块链理论研究研发了高级的加密货币功能和新的DeFi功能",
   "wallet.currency.pick.header": "选择一个货币或交易平台",
-  "wallet.dashboard.empty.text": "Go to the delegation page to choose what stake pool you want to delegate in.",
+  "wallet.dashboard.empty.text": "前往委托界面选择你想要委托的权益池。",
   "wallet.dashboard.empty.title": "你尚未委托你的ADA",
   "wallet.dashboard.epochEndTitle": "距离本时代结束",
   "wallet.dashboard.epochProgress": "时代进展",
@@ -446,7 +446,7 @@
   "wallet.dashboard.stakePool.pledge": "保证",
   "wallet.dashboard.stakePool.stake": "权益",
   "wallet.dashboard.stakePool.title": "已委托的权益池",
-  "wallet.dashboard.stakePool.viewWebpage": "View pool webpage",
+  "wallet.dashboard.stakePool.viewWebpage": "查看权益池网站",
   "wallet.dashboard.summary.adaTitle": "ADA总量",
   "wallet.dashboard.summary.delegatedTitle": "委托总量",
   "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA可以更正",
@@ -464,14 +464,14 @@
   "wallet.debugwallet.explanation1": "你所选择的钱包{checksumTextPart} 仅用于测试。",
   "wallet.debugwallet.explanation2": "为了避免错误，请不要使用该钱包。<br />你应该使用Yoroi创建一个新钱包。",
   "wallet.debugwallet.explanation3": "如果您不清楚为何会有此消息，请{contactSupportLink}",
-  "wallet.delegate.form.invalidPoolId": "Invalid pool id",
-  "wallet.delegation.poolInfo.fetching": "Fetching pool information",
+  "wallet.delegate.form.invalidPoolId": "无效的权益池ID",
+  "wallet.delegation.poolInfo.fetching": "获取权益池信息",
   "wallet.delegation.transaction.approximationLabel": "每个时代(epoch) 您预计会获得的奖励：",
   "wallet.delegation.transaction.explanationLine1": "您每次只能委托至一个权益池",
   "wallet.delegation.transaction.explanationLine2": "您可以随时将您的资金委托至另一个权益池",
   "wallet.delegation.transaction.explanationLine3": "你可以随时取消委托",
   "wallet.delegation.transaction.generation": "创建交易",
-  "wallet.delegation.transaction.stakePoolHash": "Stake pool id",
+  "wallet.delegation.transaction.stakePoolHash": "权益池ID",
   "wallet.delegation.transaction.stakePoolName": "权益池名称",
   "wallet.delegation.transaction.success.button.label": "总览页面",
   "wallet.delegation.transaction.success.explanation": "在总览页面了解权益池状态以及还有多久能收到权益。",
@@ -492,7 +492,7 @@
   "wallet.nav.type.standard": "标准钱包",
   "wallet.nav.type.trezor": "Trezor钱包",
   "wallet.navigation.delegationDashboard": "总览",
-  "wallet.navigation.delegationSimple": "Delegation",
+  "wallet.navigation.delegationSimple": "委托",
   "wallet.navigation.receive": "接收",
   "wallet.navigation.send": "发送",
   "wallet.navigation.transactions": "交易",
@@ -632,12 +632,17 @@
   "wallet.transaction.assuranceLevel.high": "高",
   "wallet.transaction.assuranceLevel.low": "低",
   "wallet.transaction.assuranceLevel.medium": "中",
+  "wallet.transaction.certificate.GenesisKeyDelegation": "Genesis key delegation",
+  "wallet.transaction.certificate.MoveInstantaneousRewardsCert": "Manually-initiated reward payout",
   "wallet.transaction.certificate.OwnerStakeDelegation": "权益池主权益授权",
   "wallet.transaction.certificate.PoolRegistration": "权益池注册",
   "wallet.transaction.certificate.PoolRetirement": "权益池退役",
   "wallet.transaction.certificate.PoolUpdate": "权益池更新",
   "wallet.transaction.certificate.StakeDelegation": "权益委托",
+  "wallet.transaction.certificate.StakeDeregistration": "Staking key deregistration",
+  "wallet.transaction.certificate.StakeRegistration": "Staking key registration",
   "wallet.transaction.certificateLabel": "证书",
+  "wallet.transaction.certificatesLabel": "证书",
   "wallet.transaction.confirmations": "确认",
   "wallet.transaction.conversion.rate": "汇价",
   "wallet.transaction.export.dialog.exportButton.label": "导出",
