--- a/app/i18n/locales/cs-CZ.json
+++ b/app/i18n/locales/cs-CZ.json
@@ -632,12 +632,17 @@
   "wallet.transaction.assuranceLevel.high": "high",
   "wallet.transaction.assuranceLevel.low": "low",
   "wallet.transaction.assuranceLevel.medium": "medium",
+  "wallet.transaction.certificate.GenesisKeyDelegation": "Genesis key delegation",
+  "wallet.transaction.certificate.MoveInstantaneousRewardsCert": "Manually-initiated reward payout",
   "wallet.transaction.certificate.OwnerStakeDelegation": "Owner stake delegation",
   "wallet.transaction.certificate.PoolRegistration": "Pool registration",
   "wallet.transaction.certificate.PoolRetirement": "Pool retirement",
   "wallet.transaction.certificate.PoolUpdate": "Pool update",
   "wallet.transaction.certificate.StakeDelegation": "Stake delegation",
+  "wallet.transaction.certificate.StakeDeregistration": "Staking key deregistration",
+  "wallet.transaction.certificate.StakeRegistration": "Staking key registration",
   "wallet.transaction.certificateLabel": "Certificate",
+  "wallet.transaction.certificatesLabel": "Certificates",
   "wallet.transaction.confirmations": "confirmations",
   "wallet.transaction.conversion.rate": "Conversion rate",
   "wallet.transaction.export.dialog.exportButton.label": "Export",
