--- a/app/i18n/locales/nl-NL.json
+++ b/app/i18n/locales/nl-NL.json
@@ -632,12 +632,17 @@
   "wallet.transaction.assuranceLevel.high": "hoog",
   "wallet.transaction.assuranceLevel.low": "laag",
   "wallet.transaction.assuranceLevel.medium": "medium",
+  "wallet.transaction.certificate.GenesisKeyDelegation": "\"Genesis Key\" delegatie",
+  "wallet.transaction.certificate.MoveInstantaneousRewardsCert": "Handmatig gestarte beloning uitbetaling",
   "wallet.transaction.certificate.OwnerStakeDelegation": "Eigenaar stem delegatie",
   "wallet.transaction.certificate.PoolRegistration": "Pool registratie",
   "wallet.transaction.certificate.PoolRetirement": "Pool terugtrekking",
   "wallet.transaction.certificate.PoolUpdate": "Pool update",
   "wallet.transaction.certificate.StakeDelegation": "\"Stake\" (Stem) delegatie",
+  "wallet.transaction.certificate.StakeDeregistration": "Uitschrijving van de \"Staking\" Sleutel",
+  "wallet.transaction.certificate.StakeRegistration": "\"Staking\" Sleutel registratie",
   "wallet.transaction.certificateLabel": "Certificaat",
+  "wallet.transaction.certificatesLabel": "Certificaten",
   "wallet.transaction.confirmations": "bevestigingen",
   "wallet.transaction.conversion.rate": "Conversiepercentage",
   "wallet.transaction.export.dialog.exportButton.label": "Export",
