--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -665,6 +665,7 @@
   "wallet.transaction.type.exchange": "Exchange",
   "wallet.transaction.type.intrawallet": "{currency} intrawallet transaction",
   "wallet.transaction.type.multiparty": "{currency} multiparty transaction",
+  "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "Byron-era wallet",
   "wallet.transfer.cards.shelleyItn": "Shelley testnet",
   "wallet.transfer.instruction": "Any ADA claimed will be transferred to your currently selected wallet",
