--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -282,8 +282,8 @@
   "transfer.form.masterkey.input.hint": "Enter master key",
   "transfer.form.masterkey.input.label": "Master key",
   "transfer.form.masterkey.requirement": "Note: master keys are 192 characters and hexadecimal-encoded",
-  "transfer.instructions.attention.legacy": "Legacy wallets created during the Byron-era (before November 29th, 2019) can no longer be used. However, you can transfer your legacy funds to your current wallet to access your funds.",
   "transfer.instructions.attention.title.label": "Attention",
+  "transfer.instructions.fee.source.disclaimer": "The transaction fee to claim funds will be paid by the wallet you currently have selected.",
   "transfer.instructions.hardware.disclaimer.checkbox": "I acknowledge that entering my hardware wallet's recovery phrase carries significant risk.",
   "transfer.instructions.hardware.disclaimer.instructions1": "When you originally setup your hardware wallet, you were asked to write down a recovery phrase on a piece of paper. Entering this phrase will allow you to transfer your funds out of your hardware wallet and into the current wallet.",
   "transfer.instructions.hardware.disclaimer.instructions2": "If you use this feature, you should generate a new recovery phrase for your hardware wallet. If you don't know why or how to do this, we do not recommend you use this feature.",
@@ -294,7 +294,6 @@
   "transfer.legacy.daedalus.title": "Legacy Daedalus Wallet",
   "transfer.legacy.icarus.title": "Icarus/Yoroi Wallet",
   "transfer.summary.addressFrom.label": "From",
-  "transfer.summary.addressTo.label": "To",
   "transfer.summary.finalBalance.label": "Final balance",
   "transfer.summary.recoveredBalance.label": "Recovered balance",
   "transfer.summary.transactionFee.label": "Transaction fees",
@@ -350,6 +349,7 @@
   "wallet.address.category.byron": "Addresses created using the Byron-era address format",
   "wallet.address.category.group": "Addresses formed by the combination of a spending key and a staking key",
   "wallet.address.category.p2pk": "Addresses generated directly from a public key",
+  "wallet.address.category.reward": "Address for your staking key",
   "wallet.amountInput.feesLabel": "+ {amount} of fees",
   "wallet.backup.dialog.legacy.checkConfirm": "Do you want to check if your wallet needs to be upgraded?",
   "wallet.backup.dialog.legacy.explanation": "If you had any ADA in your wallet on November 29th, 2019\n    you have to upgrade your wallet to a Shelley \"reward wallet\".",
@@ -514,6 +514,7 @@
   "wallet.receive.navigation.groupLabel": "Group",
   "wallet.receive.navigation.hasBalanceLabel": "Has Balance",
   "wallet.receive.navigation.p2pkLabel": "P2PK",
+  "wallet.receive.navigation.rewardLabel": "Reward",
   "wallet.receive.navigation.unusedLabel": "Unused",
   "wallet.receive.navigation.usedLabel": "Used",
   "wallet.receive.page.copyAddressLabel": "Copy address",
@@ -527,6 +528,8 @@
   "wallet.receive.page.noResultsFoundLabel": "No results found",
   "wallet.receive.page.notFoundAnyAddresses": "We couldn't find any addresses matching your filter.",
   "wallet.receive.page.outputAmountUTXO": "Balance (UTXO sum)",
+  "wallet.receive.page.rewardAddressLine1": "Your reward holds your rewards and is used to validate any changes to your delegation preference",
+  "wallet.receive.page.rewardAddressLine2": "You cannot send ADA to reward addresses, but we show it for personal auditing purposes",
   "wallet.receive.page.unmangeLabel": "Correct delegation preference",
   "wallet.receive.page.verifyAddressLabel": "Verify address",
   "wallet.receive.page.walletAddressLabel": "Your wallet address",
@@ -668,12 +671,13 @@
   "wallet.transaction.type.multiparty": "{currency} multiparty transaction",
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "Byron-era wallet",
-  "wallet.transfer.cards.shelleyItn": "Shelley testnet",
+  "wallet.transfer.cards.shelley": "Shelley-era wallet",
   "wallet.transfer.instruction": "Any ADA claimed will be transferred to your currently selected wallet",
   "wallet.undelegation.transaction.explanationLine1": "You do NOT need to undelegate before switching stake pools",
   "wallet.undelegation.transaction.explanationLine2": "It will take 2 epochs after the end of the current epoch for undelegation to take effect",
   "wallet.unsupported.subtitle": "The selected wallet does not support this functionality",
   "wallet.unsupported.title": "Wallet type not supported",
+  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} ADA from your deposit",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copy to clipboard",
   "widgets.explorer.tooltip": "Go to {websiteName}",
   "widgets.warningBox.headerText": "ATTENTION:",
@@ -691,7 +695,6 @@
   "yoroiTransfer.start.instructions.yoroiPaper": "Yoroi paper wallet",
   "yoroiTransfer.successPage.text": "Your funds were successfully transferred.",
   "yoroiTransfer.successPage.title": "success",
-  "yoroiTransfer.summary.addressFrom.subLabel": "Wallet Addresses",
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "Generating transfer transaction",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Checking addresses funds",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Fetching addresses",
