--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -493,8 +493,9 @@
   "wallet.nav.type.paper": "Paper wallet",
   "wallet.nav.type.standard": "Standard wallet",
   "wallet.nav.type.trezor": "Trezor wallet",
+  "wallet.navigation.delegationById": "Delegation by Id",
   "wallet.navigation.delegationDashboard": "Dashboard",
-  "wallet.navigation.delegationSimple": "Delegation",
+  "wallet.navigation.delegationList": "Delegation List",
   "wallet.navigation.receive": "Receive",
   "wallet.navigation.send": "Send",
   "wallet.navigation.transactions": "Transactions",
@@ -615,7 +616,6 @@
   "wallet.settings.unchangedPassword": "Password unchanged since wallet creation",
   "wallet.staking.pool.unknownLabel": "Unknown pool",
   "wallet.staking.warning.pendingTx": "You cannot change your delegation preference while a transaction is pending",
-  "wallet.staking.warning.title": "Delegation temporarily disabled",
   "wallet.summary.no.transaction": "No transactions found",
   "wallet.summary.page.dateTime": "Date/time",
   "wallet.summary.page.integratedNotificationMessage": "You have successfully integrated with your {deviceName}",
